[package]
name = "tokio-tfo"
version = "0.1.6"
edition = "2018"
description = "TCP Fast Open (TFO) in Rust for tokio"
repository = "https://github.com/zonyitoo/tokio-tfo"
readme = "README.md"
documentation = "https://docs.rs/tokio-tfo"
keywords = ["tokio", "tfo", "network", "tcp"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0"
libc = "0.2.94"
futures = "0.3"
log = "0.4"
pin-project = "1.0"

socket2 = { version = "0.4", features = ["all"] }
tokio = { version = "1.9.0", features = ["io-util", "macros", "net", "rt", "sync", "time"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["mswsock", "winsock2"] }
once_cell = "1.8"
