[package]
name = "tokio-tfo"
version = "0.4.0"
edition = "2021"
description = "TCP Fast Open (TFO) in Rust for tokio"
repository = "https://github.com/zonyitoo/tokio-tfo"
readme = "README.md"
documentation = "https://docs.rs/tokio-tfo"
keywords = ["tokio", "tfo", "network", "tcp"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0"
libc = "0.2.94"
futures = "0.3"
log = "0.4"
pin-project = "1.0"

socket2 = { version = "0.6", features = ["all"] }
tokio = { version = "1.9.0", features = [
    "io-util",
    "macros",
    "net",
    "rt",
    "sync",
    "time",
] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Networking_WinSock",
] }
once_cell = "1.8"
